tests/unit/default/syntax-error/133-add-fk-child-to.e.t
---- IN ----
+FK%child(foo,bar)=>
---- OUT ----
---- ERR ----
syntax: expected <table-columns-ref> after `...foo,bar)=>` instead of EOL at position 20 - at line 1
---- EXIT ----
1
